--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,18 @@
 h1 {
-  color: blue;
-}
+  color: #963509;
+  text-align: center;
+  }
+
+  h2 {
+    font-style: italic;
+    text-align: center;
+    color: #e84d00;
+  }
+
+  p {
+    color: #444444;
+  }
+
+  body {
+    background-color: #f4d6c8;
+  }
