--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,21 @@
 h1 {
-  color: blue;
+  font-family: Arial;
+  color: #1caaec;
+  text-align: center;
+}
+
+h2 {
+  font-family: Arial;
+  font-style: italic;
+  text-align: center;
+  color: #12448d;
+}
+
+p {
+  font-family: Arial;
+  color: #444444;
+}
+
+body {
+  background-color: #f7f7f7;
 }
