modified text arrangement in all website files and change photo on accomodations page.

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,13 +10,13 @@ h2 {
 }
 
 h3 {
-  text-align: left;
+  text-align: center;
   color: #1caaec;
 }
 
 p {
   color: #444444;
-  text-align: left;
+  text-align: center;
 }
 
 body {
@@ -24,4 +24,9 @@ body {
   font-family: Arial;
   font-size: 18px;
 
+}
+
+img {
+    display: block;
+    margin: 0 auto;
 }
